# fkl-ffi

./: .gitmodules  CMakeLists.txt  README.md  ffi.fkl  main.fkl
c/: fklffi.c  fklffidll.c  fklffidll.h  fklffimem.c  fklffimem.h
